# Proyecto1.0

./: CMakeLists.txt  README.md  aeronave.cpp  aeronave.h  aeropuerto.h  autoevaluacion.docx  persona.cpp  persona.h  pro.cpp  puerta.cpp  puerta.h  torre.cpp  torre.h  vuelo.cpp  vuelo.h
output/: si
proyecto/: CMakeLists.txt  Puerta.cpp  Puerta.h  aeronave.cpp  aeronave.h  aeropuerto.h  persona.cpp  persona.h  pro.cpp  torre.cpp  torre.h  vuelo.cpp  vuelo.h
proyecto/output/: si
